fixed spacing

--- a/Resume.css
+++ b/Resume.css
@@ -22,18 +22,18 @@ a{
     display: inline;
     font-size: x-large;
     color: green;
-    word-spacing: 150px;
+    word-spacing: 75px;
     background-color: lightgray;
 }
 #olpic{
     display: inline;
-    margin-left: 475px;
+    margin-left: 300px;
     margin-top: 40px;
     margin-bottom: 40px;
 }
 #revo{
     display: inline;
-    margin-left: 650px;
+    margin-left: 450px;
     margin-top: 40px;
     margin-bottom: 40px;
 }
